k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: zainabf123/lemp-rahti-backend:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
