k8s/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  host: frontend-cloud-services-assignment4.2.rahtiapp.fi
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
